tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/rawmulti-lf.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-lf   = '''null'''
  |                        ^
invalid multiline literal string
